--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,15 @@ body {
 	width: 90%;
 }
 
+img {
+	border: 2px solid grey;
+	border-radius: 10px;
+}
+
+.pcard {
+	//width: 600px;
+}
+
 table {
 	width: 100%;
 	border: 1px solid lightgrey;
